--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -1,29 +1,11 @@
-<%= form_for(@post) do |f| %>
-  <%= error_messages_for @post %>
-<div class="field">
-<%= f.label :author_id, "Author" %>
-<%= f.collection_select :author_id, @authors, :id, :full_name %></div>
-  <div class="field">
-    <%= f.label :title %><br />
-    <%= f.text_field :title, :size => 50 %>
-  </div>
-  <div class="field">
-    <%= f.label :excerpt %><br />
-    <%= f.text_area :excerpt, :rows => 10, :cols => 80 %>
-  </div>
-  <div class="field">
-    <%= f.label :body %><br />
-    <%= f.text_area :body, :rows => 10, :cols => 80 %>
-  </div>
-  <div class="field">
-<%= f.label :categories, "Categorias" %><br />
-<% @categories.each do |c| %>
-<%= check_box_tag  "post[category_id]", c.id, @post.categories.include?(c) %>
-<%= c.name %><br />
-<% end %>
-</div>
-  
-  <div class="actions">
-    <%= f.submit %>
+<%= simple_form_for @post, :html => { :class => 'form-horizontal' } do |f| %>
+  <%= f.input :title %>
+  <%= f.input :excerpt %>
+  <%= f.input :body %>
+  <%= f.input :author_id %>
+  <div class="form-actions">
+    <%= f.button :submit, :class => 'btn-primary' %>
+    <%= link_to t('.cancel', :default => t("helpers.links.cancel")),
+                posts_path, :class => 'btn' %>
   </div>
 <% end %>
