--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,24 +1,27 @@
-<h2><%= @post.title %></h2>
-
-<div id="post">
-  <%= @post.body %>
+<%- model_class = Post -%>
+<div class="page-header">
+  <h1><%=t '.title', :default => model_class.model_name.human %></h1>
 </div>
 
-<hr/>
+<dl class="dl-horizontal">
+  <dt><strong><%= model_class.human_attribute_name(:title) %>:</strong></dt>
+  <dd><%= @post.title %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:excerpt) %>:</strong></dt>
+  <dd><%= @post.excerpt %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:body) %>:</strong></dt>
+  <dd><%= @post.body %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:author_id) %>:</strong></dt>
+  <dd><%= @post.author_id %></dd>
+</dl>
 
-<h3>Comments</h3>
-
-<div id="comments">
-<% if @post.comments.any? %>
-  <%= render @post.comments %>
-<% else %>
-  <p>Nobody commented this post yet.</p>
-<% end %>
+<div class="form-actions">
+  <%= link_to t('.back', :default => t("helpers.links.back")),
+              posts_path, :class => 'btn'  %>
+  <%= link_to t('.edit', :default => t("helpers.links.edit")),
+              edit_post_path(@post), :class => 'btn' %>
+  <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
+              post_path(@post),
+              :method => 'delete',
+              :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },
+              :class => 'btn btn-danger' %>
 </div>
-
-<hr/>
-
-<%= render "comments/form", :post => @post, :comment => Comment.new %>
-
-<%= link_to 'Edit', edit_post_path(@post) %> |
-<%= link_to 'Back', posts_path %>
